--- a/GOOD_SAMARITAN/Samaritan.css
+++ b/GOOD_SAMARITAN/Samaritan.css
@@ -412,6 +412,41 @@ header {
   padding: 12px;
 }
 
+/* ===== MODAL MESSAGE ===== */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+
+.modal-content {
+    background-color: #F7F6F3;
+    margin: 15% auto;
+    padding: 20px 30px;
+    border: 1px solid #1A2E50;
+    width: 90%;
+    max-width: 400px;
+    text-align: center;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  }
+
+  /* Modal Headline */
+.modal-content h2 {
+  color: var(--primary-dark);
+  margin-bottom: 10px;
+}
+
+/* Modal Paragraph */
+.modal-content p {
+  color: var(--primary-dark);
+}
 
 /* ===== CTA BUTTON ===== */
 .button {
